@@ -5,7 +5,6 @@ This project implements an A* algorithm for path traversal to solve a given boar
 
 #### Prerequisites
 - Java Development Kit (JDK)
-- JavaFX SDK
 - A Unix-like shell (e.g., bash) if you want to use the provided script
 
 #### Running the project
@@ -16,22 +15,5 @@ This project implements an A* algorithm for path traversal to solve a given boar
   - `./run.sh`
 
 - Alternatively, you can run the project manually with the following command:
-  - `javac -cp src -d bin src/rushhour/*.java test/test.java`
-  - `java -cp "bin:test" test`
-
-#### Running the GUI
-- `cd gui` (assuming you are in root directory)
-
-- Add an environment variable: (download and find the path to your own `javafx-sdk-20/lib`)
-  - `export PATH_TO_FX=/path/to/javafx-sdk-20/lib`
-
-- Compile and Run the application: (make sure you are in /gui)
-  - `chmod +x run.sh`
-  - `./run.sh`
-
-- Alternatively, you can run the project manually with the following command:
-  - Compile the application:
-    - `javac --module-path $PATH_TO_FX --add-modules javafx.controls GameApp.java`
-
-  - Run the application:
-    - `java --module-path $PATH_TO_FX --add-modules javafx.controls GameApp`
+  - `javac -cp "src:lib/json-20210307.jar" -d bin src/gui/model/*.java src/gui/persistence/*.java src gui/ui/*.java`
+  - `java -cp "bin:lib/json-20210307.jar" ui/Main`
